[gd_scene load_steps=5 format=3 uid="uid://brfpwqaju5i51"]

[ext_resource type="Script" path="res://scripts/controller.gd" id="1_bv5w3"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_lqhvd"]
[ext_resource type="Script" path="res://scripts/label.gd" id="2_p7it5"]
[ext_resource type="PackedScene" uid="uid://b85v78pqg4r43" path="res://scenes/render_server_demo.tscn" id="3_yxi3o"]

[node name="Controller" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.41799, 12.3326)
script = ExtResource("1_bv5w3")

[node name="UserInterface" type="Node" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="UserInterface"]
layout_direction = 2
anchors_preset = -1
anchor_top = 0.003
anchor_bottom = 0.003
offset_left = 8.0
offset_top = 8.056
offset_right = 1151.0
offset_bottom = 651.056

[node name="GridContainer" type="GridContainer" parent="UserInterface/BoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="UserInterface/BoxContainer/GridContainer"]
layout_mode = 2
text = "Stop Recording"

[node name="StartSPawner" type="Button" parent="UserInterface/BoxContainer/GridContainer"]
layout_mode = 2
text = "Start Scene Spawner"

[node name="StartRenderServerQuads" type="Button" parent="UserInterface/BoxContainer/GridContainer"]
layout_mode = 2
text = "Start Render Server Spawner
"

[node name="StartMult" type="Button" parent="UserInterface/BoxContainer/GridContainer"]
layout_mode = 2
text = "Start MultiMesh
"

[node name="Reload" type="Button" parent="UserInterface/BoxContainer/GridContainer"]
layout_mode = 2
text = "Reload Scene
"

[node name="Label" type="Label" parent="UserInterface/BoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "
"
script = ExtResource("2_p7it5")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)

[node name="RenderServerDemo" parent="." instance=ExtResource("3_yxi3o")]

[node name="QuadSpawner" type="Node3D" parent="."]
script = ExtResource("1_lqhvd")

[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/Button" to="UserInterface/BoxContainer/Label" method="_on_button_pressed"]
[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/StartSPawner" to="QuadSpawner" method="_on_start_s_pawner_pressed"]
[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/StartRenderServerQuads" to="RenderServerDemo" method="_on_start_render_server_quads_pressed"]
[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/StartMult" to="." method="_on_start_mult_pressed"]
[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/StartMult" to="UserInterface/BoxContainer/Label" method="_on_start_mult_pressed"]
[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="UserInterface/BoxContainer/GridContainer/Reload" to="RenderServerDemo" method="_on_reload_pressed"]
[connection signal="render_server_quad_spawned" from="RenderServerDemo" to="UserInterface/BoxContainer/Label" method="_on_node_3d_render_server_quad_spawned"]
[connection signal="quad_spawned" from="QuadSpawner" to="UserInterface/BoxContainer/Label" method="_on_quad_spawner_quad_spawned"]
